--- a/src/css/Calender.css
+++ b/src/css/Calender.css
@@ -40,3 +40,11 @@
         width: 80% !important;
     }
 }
+
+#diasMes:hover {
+    cursor: pointer;
+}
+
+#MuiGrid-item {
+    cursor: pointer;
+}
